--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,23 @@
 name: esc_pos_printer
 description: The library allows to print receipts using an ESC/POS thermal WiFi printer.
 version: 4.1.0
-homepage: https://github.com/andrey-ushakov/esc_pos_printer
+publish_to: none # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
   charset_converter: ^2.0.0
-  esc_pos_utils: ^1.1.0
+  esc_pos_utils:
+    path: ../esc_pos_utils
   flutter:
     sdk: flutter
-  # esc_pos_utils:
-  #   path: ../esc_pos_utils
-  image: ^3.0.2
+  image: ^4.3.0
+  intl: ^0.19.0
+  path_provider: ^2.1.3
+  ping_discover_network_plus: ^0.0.5
+  qr_flutter: ^4.1.0
+  wifi_iot: ^0.3.19+1
 
 dev_dependencies:
   flutter_test:
