--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   path_provider: ^2.1.3
   ping_discover_network_plus: ^0.0.5
   qr_flutter: ^4.1.0
-  wifi_iot: ^0.3.19+1
+  network_info_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
