--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,7 @@ environment:
 
 dependencies:
   charset_converter: ^2.0.0
-  esc_pos_utils:
-    path: ../esc_pos_utils
+  esc_pos_utils_plus: ^2.0.4
   flutter:
     sdk: flutter
   image: ^4.3.0
