--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,15 @@ version: 4.1.0
 publish_to: none # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   charset_converter: ^2.0.0
   esc_pos_utils_plus: ^2.0.4
   flutter:
     sdk: flutter
-  image: ^4.3.0
-  intl: ^0.19.0
+  image: ^4.5.3
+  intl: 0.20.2
   network_info_plus: ^6.1.0
   path_provider: ^2.1.3
   ping_discover_network_plus: ^0.0.5
