--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   image: ^4.5.3
-  intl: 0.19.0
+  intl: ^0.20.2
   network_info_plus: ^6.1.3
   path_provider: ^2.1.3
   ping_discover_network_plus: ^0.0.5
